objects/DRDP_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Very Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Page__c</fullName>
        <label>Feedback Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Page</fullName>
                </value>
                <value>
                    <fullName>Study List Page</fullName>
                </value>
                <value>
                    <fullName>Relationship List Page</fullName>
                </value>
                <value>
                    <fullName>Data Asset List Page</fullName>
                </value>
                <value>
                    <fullName>Request List Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>